objects/Visit.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Visits Related to an Oppty</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Name__c</fullName>
        <formula>TEXT (Visit_Type__c) &amp; &quot; - &quot; &amp; TEXT(MONTH(DATEVALUE(PlannedVisitStartTime))) + &quot;/&quot; + TEXT(DAY(DATEVALUE(PlannedVisitStartTime))) + &quot;/&quot; + TEXT(YEAR(DATEVALUE(PlannedVisitStartTime))) +
IF(NOT(ISBLANK(Opportunity__c)) ,&quot; - &quot; &amp; Opportunity__r.Property__r.Street, NULL) + &quot; - &quot; + Account.AccountName__c</formula>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Result_2__c</fullName>
        <label>Visit Result 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Visit_Result__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Result_Level_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Result_3__c</fullName>
        <description>The third tier of Visit Result. The higher the tier the more granular the reason.</description>
        <label>Visit Result 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Visit_Result_2__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Result_Level_3</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Result__c</fullName>
        <label>Visit Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Results_Level_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Serv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Visit</fullName>
        <columns>Visit_Name__c</columns>
        <columns>PlannedVisitStartTime</columns>
        <columns>Visit_Result__c</columns>
        <columns>Visit_Result_2__c</columns>
        <columns>Visit_Result_3__c</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>Owner</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>Visit.Visit_Default</value>
        </filters>
        <filters>
            <field>PlannedVisitStartTime</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Visit_Result__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Visit_View</fullName>
        <columns>Visit_Name__c</columns>
        <columns>Status</columns>
        <columns>PlannedVisitStartTime</columns>
        <columns>PlannedVisitEndTime</columns>
        <columns>Account</columns>
        <columns>Name</columns>
        <columns>Visit_Result__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RecordType</field>
            <operation>equals</operation>
            <value>Visit.Visit_Default</value>
        </filters>
        <label>Visit View</label>
    </listViews>
    <recordTypes>
        <fullName>Visit_Default</fullName>
        <active>true</active>
        <label>Visit Default</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>